-- V1__init_schema.sql
-- TicketRush - Initial PostgreSQL schema
-- Flyway location: src/main/resources/db/migration/V1__init_schema.sql
--
-- Notes:
-- - PostgreSQL is the source of truth.
-- - Redis is used outside this schema for cache, queue, pub/sub, token/rate limit.
-- - Payments are mocked through orders.status = 'PAID'.
-- - Tickets are represented by order_items.qr_code and order_items.ticket_status.

-- =========================================================
-- EXTENSIONS
-- =========================================================

CREATE EXTENSION IF NOT EXISTS pgcrypto;

-- Optional but useful for event search with ILIKE/fuzzy search later.
CREATE EXTENSION IF NOT EXISTS pg_trgm;

-- =========================================================
-- ENUM TYPES
-- =========================================================

CREATE TYPE user_role AS ENUM (
    'CUSTOMER',
    'PROVIDER',
    'ADMIN'
);

CREATE TYPE user_status AS ENUM (
    'ACTIVE',
    'BLOCKED'
);

CREATE TYPE auth_provider AS ENUM (
    'LOCAL',
    'GOOGLE'
);

CREATE TYPE event_status AS ENUM (
    'DRAFT',
    'PUBLISHED',
    'CANCELLED',
    'FINISHED'
);

CREATE TYPE seat_status AS ENUM (
    'AVAILABLE',
    'LOCKED',
    'SOLD'
);

CREATE TYPE order_status AS ENUM (
    'PENDING',
    'PAID',
    'EXPIRED',
    'CANCELLED'
);

CREATE TYPE ticket_status AS ENUM (
    'NOT_ISSUED',
    'VALID',
    'USED',
    'CANCELLED'
);

CREATE TYPE discount_type AS ENUM (
    'PERCENT',
    'FIXED'
);

CREATE TYPE membership_status AS ENUM (
    'ACTIVE',
    'EXPIRED',
    'CANCELLED'
);

-- =========================================================
-- COMMON UPDATED_AT TRIGGER
-- =========================================================

CREATE OR REPLACE FUNCTION set_updated_at()
RETURNS TRIGGER AS $$
BEGIN
    NEW.updated_at = now();
    RETURN NEW;
END;
$$ LANGUAGE plpgsql;

-- =========================================================
-- USERS
-- =========================================================

CREATE TABLE users (
    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),

    email VARCHAR(255) NOT NULL UNIQUE,
    password_hash VARCHAR(255),

    full_name VARCHAR(255) NOT NULL,
    avatar_url TEXT,
    phone VARCHAR(30),
    gender VARCHAR(20),
    date_of_birth DATE,

    role user_role NOT NULL DEFAULT 'CUSTOMER',
    status user_status NOT NULL DEFAULT 'ACTIVE',

    provider auth_provider NOT NULL DEFAULT 'LOCAL',
    provider_id VARCHAR(255),

    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT ck_users_email_not_blank CHECK (length(trim(email)) > 0),
    CONSTRAINT ck_users_full_name_not_blank CHECK (length(trim(full_name)) > 0),
    CONSTRAINT ck_users_local_password CHECK (
        provider <> 'LOCAL'
        OR password_hash IS NOT NULL
    )
);

CREATE UNIQUE INDEX ux_users_provider_provider_id
ON users(provider, provider_id)
WHERE provider_id IS NOT NULL;

CREATE INDEX idx_users_email ON users(email);
CREATE INDEX idx_users_role ON users(role);
CREATE INDEX idx_users_status ON users(status);

CREATE TRIGGER trg_users_set_updated_at
BEFORE UPDATE ON users
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

-- =========================================================
-- CATEGORY, EVENT
-- =========================================================

CREATE TABLE categories (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    name VARCHAR(100) NOT NULL UNIQUE,
    slug VARCHAR(120) NOT NULL UNIQUE,
    description TEXT,
    image_url TEXT,
    is_active BOOLEAN NOT NULL DEFAULT true,

    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT ck_categories_name_not_blank CHECK (length(trim(name)) > 0),
    CONSTRAINT ck_categories_slug_not_blank CHECK (length(trim(slug)) > 0)
);

CREATE INDEX idx_categories_slug ON categories(slug);
CREATE INDEX idx_categories_is_active ON categories(is_active);

CREATE TABLE events (
    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),

    provider_id UUID NOT NULL,
    category_id BIGINT NOT NULL,

    title VARCHAR(255) NOT NULL,
    slug VARCHAR(300) NOT NULL UNIQUE,
    description TEXT,
    banner_url TEXT,

    location_name VARCHAR(255),
    address TEXT,
    city VARCHAR(100),

    start_time TIMESTAMPTZ NOT NULL,
    end_time TIMESTAMPTZ NOT NULL,

    sale_start_time TIMESTAMPTZ,
    sale_end_time TIMESTAMPTZ,

    status event_status NOT NULL DEFAULT 'DRAFT',

    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT fk_events_provider
        FOREIGN KEY (provider_id) REFERENCES users(id),

    CONSTRAINT fk_events_category
        FOREIGN KEY (category_id) REFERENCES categories(id),

    CONSTRAINT ck_events_title_not_blank CHECK (length(trim(title)) > 0),
    CONSTRAINT ck_events_slug_not_blank CHECK (length(trim(slug)) > 0),
    CONSTRAINT ck_events_time_valid CHECK (end_time > start_time),
    CONSTRAINT ck_events_sale_time_valid CHECK (
        sale_start_time IS NULL
        OR sale_end_time IS NULL
        OR sale_end_time > sale_start_time
    )
);

CREATE INDEX idx_events_provider_id ON events(provider_id);
CREATE INDEX idx_events_category_id ON events(category_id);
CREATE INDEX idx_events_slug ON events(slug);
CREATE INDEX idx_events_status ON events(status);
CREATE INDEX idx_events_city ON events(city);
CREATE INDEX idx_events_start_time ON events(start_time);
CREATE INDEX idx_events_status_start_time ON events(status, start_time);
CREATE INDEX idx_events_category_status ON events(category_id, status);
CREATE INDEX idx_events_provider_status ON events(provider_id, status);

-- Useful for header search / event search.
CREATE INDEX idx_events_title_trgm
ON events
USING GIN (title gin_trgm_ops);

CREATE INDEX idx_events_search_vector
ON events
USING GIN (
    to_tsvector(
        'simple',
        coalesce(title, '') || ' ' ||
        coalesce(description, '') || ' ' ||
        coalesce(city, '') || ' ' ||
        coalesce(location_name, '')
    )
);

CREATE TRIGGER trg_events_set_updated_at
BEFORE UPDATE ON events
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

-- =========================================================
-- EVENT SEAT MAP
-- =========================================================

CREATE TABLE event_sections (
    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),

    event_id UUID NOT NULL,

    name VARCHAR(100) NOT NULL,
    base_price NUMERIC(12,2) NOT NULL,

    row_count INT NOT NULL,
    seats_per_row INT NOT NULL,

    display_order INT NOT NULL DEFAULT 0,

    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT fk_event_sections_event
        FOREIGN KEY (event_id) REFERENCES events(id) ON DELETE CASCADE,

    CONSTRAINT uq_event_sections_event_name UNIQUE (event_id, name),

    CONSTRAINT ck_event_sections_name_not_blank CHECK (length(trim(name)) > 0),
    CONSTRAINT ck_event_sections_base_price_non_negative CHECK (base_price >= 0),
    CONSTRAINT ck_event_sections_row_count_positive CHECK (row_count > 0),
    CONSTRAINT ck_event_sections_seats_per_row_positive CHECK (seats_per_row > 0),
    CONSTRAINT ck_event_sections_display_order_non_negative CHECK (display_order >= 0)
);

CREATE INDEX idx_event_sections_event_id ON event_sections(event_id);
CREATE INDEX idx_event_sections_display_order ON event_sections(display_order);

CREATE TRIGGER trg_event_sections_set_updated_at
BEFORE UPDATE ON event_sections
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

CREATE TABLE event_seats (
    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),

    event_id UUID NOT NULL,
    section_id UUID NOT NULL,

    row_label VARCHAR(10) NOT NULL,
    seat_number INT NOT NULL,
    seat_code VARCHAR(40) NOT NULL,

    price NUMERIC(12,2) NOT NULL,

    status seat_status NOT NULL DEFAULT 'AVAILABLE',

    locked_by UUID,
    lock_expires_at TIMESTAMPTZ,

    version INT NOT NULL DEFAULT 0,

    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT fk_event_seats_event
        FOREIGN KEY (event_id) REFERENCES events(id) ON DELETE CASCADE,

    CONSTRAINT fk_event_seats_section
        FOREIGN KEY (section_id) REFERENCES event_sections(id) ON DELETE CASCADE,

    CONSTRAINT fk_event_seats_locked_by
        FOREIGN KEY (locked_by) REFERENCES users(id),

    CONSTRAINT uq_event_seats_event_seat_code UNIQUE (event_id, seat_code),
    CONSTRAINT uq_event_seats_event_section_row_seat UNIQUE (event_id, section_id, row_label, seat_number),

    CONSTRAINT ck_event_seats_row_label_not_blank CHECK (length(trim(row_label)) > 0),
    CONSTRAINT ck_event_seats_seat_code_not_blank CHECK (length(trim(seat_code)) > 0),
    CONSTRAINT ck_event_seats_seat_number_positive CHECK (seat_number > 0),
    CONSTRAINT ck_event_seats_price_non_negative CHECK (price >= 0),
    CONSTRAINT ck_event_seats_version_non_negative CHECK (version >= 0),
    CONSTRAINT ck_event_seats_lock_consistency CHECK (
        (
            status = 'LOCKED'
            AND locked_by IS NOT NULL
            AND lock_expires_at IS NOT NULL
        )
        OR
        (
            status <> 'LOCKED'
            AND lock_expires_at IS NULL
        )
    )
);

CREATE INDEX idx_event_seats_event_id ON event_seats(event_id);
CREATE INDEX idx_event_seats_section_id ON event_seats(section_id);
CREATE INDEX idx_event_seats_status ON event_seats(status);
CREATE INDEX idx_event_seats_locked_by ON event_seats(locked_by);
CREATE INDEX idx_event_seats_lock_expires_at ON event_seats(lock_expires_at);
CREATE INDEX idx_event_seats_event_status ON event_seats(event_id, status);
CREATE INDEX idx_event_seats_event_section_status ON event_seats(event_id, section_id, status);

-- Important for the scheduler that releases expired locked seats.
CREATE INDEX idx_event_seats_expired_locks
ON event_seats(lock_expires_at)
WHERE status = 'LOCKED';

CREATE TRIGGER trg_event_seats_set_updated_at
BEFORE UPDATE ON event_seats
FOR EACH ROW
EXECUTE FUNCTION set_updated_at();

-- =========================================================
-- MEMBERSHIP
-- =========================================================

CREATE TABLE membership_plans (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,

    name VARCHAR(100) NOT NULL UNIQUE,
    description TEXT,

    price NUMERIC(12,2) NOT NULL DEFAULT 0,
    duration_days INT NOT NULL,
    discount_percent NUMERIC(5,2) NOT NULL DEFAULT 0,

    is_active BOOLEAN NOT NULL DEFAULT true,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT ck_membership_plans_name_not_blank CHECK (length(trim(name)) > 0),
    CONSTRAINT ck_membership_plans_price_non_negative CHECK (price >= 0),
    CONSTRAINT ck_membership_plans_duration_positive CHECK (duration_days > 0),
    CONSTRAINT ck_membership_plans_discount_range CHECK (discount_percent >= 0 AND discount_percent <= 100)
);

CREATE INDEX idx_membership_plans_is_active ON membership_plans(is_active);

CREATE TABLE user_memberships (
    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),

    user_id UUID NOT NULL,
    plan_id BIGINT NOT NULL,

    start_at TIMESTAMPTZ NOT NULL,
    end_at TIMESTAMPTZ NOT NULL,

    status membership_status NOT NULL DEFAULT 'ACTIVE',
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT fk_user_memberships_user
        FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,

    CONSTRAINT fk_user_memberships_plan
        FOREIGN KEY (plan_id) REFERENCES membership_plans(id),

    CONSTRAINT ck_user_memberships_time_valid CHECK (end_at > start_at)
);

CREATE INDEX idx_user_memberships_user_id ON user_memberships(user_id);
CREATE INDEX idx_user_memberships_plan_id ON user_memberships(plan_id);
CREATE INDEX idx_user_memberships_status ON user_memberships(status);
CREATE INDEX idx_user_memberships_end_at ON user_memberships(end_at);
CREATE INDEX idx_user_memberships_user_status ON user_memberships(user_id, status);

-- Optional business rule:
-- Keep this index if the system allows only one ACTIVE membership per user at a time.
-- If you want users to hold multiple ACTIVE memberships, remove this index.
CREATE UNIQUE INDEX ux_user_memberships_one_active_per_user
ON user_memberships(user_id)
WHERE status = 'ACTIVE';

-- =========================================================
-- VOUCHER
-- =========================================================

CREATE TABLE vouchers (
    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),

    code VARCHAR(50) NOT NULL UNIQUE,
    description TEXT,

    discount_type discount_type NOT NULL,
    discount_value NUMERIC(12,2) NOT NULL,

    max_discount NUMERIC(12,2),
    min_order_amount NUMERIC(12,2) NOT NULL DEFAULT 0,

    membership_required BOOLEAN NOT NULL DEFAULT false,

    start_at TIMESTAMPTZ NOT NULL,
    end_at TIMESTAMPTZ NOT NULL,

    usage_limit INT,
    used_count INT NOT NULL DEFAULT 0,

    is_active BOOLEAN NOT NULL DEFAULT true,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT ck_vouchers_code_not_blank CHECK (length(trim(code)) > 0),
    CONSTRAINT ck_vouchers_time_valid CHECK (end_at > start_at),
    CONSTRAINT ck_vouchers_discount_value_positive CHECK (discount_value > 0),
    CONSTRAINT ck_vouchers_max_discount_non_negative CHECK (max_discount IS NULL OR max_discount >= 0),
    CONSTRAINT ck_vouchers_min_order_non_negative CHECK (min_order_amount >= 0),
    CONSTRAINT ck_vouchers_usage_limit_positive CHECK (usage_limit IS NULL OR usage_limit > 0),
    CONSTRAINT ck_vouchers_used_count_non_negative CHECK (used_count >= 0),
    CONSTRAINT ck_vouchers_used_count_not_exceed_limit CHECK (
        usage_limit IS NULL OR used_count <= usage_limit
    )
);

CREATE INDEX idx_vouchers_code ON vouchers(code);
CREATE INDEX idx_vouchers_is_active ON vouchers(is_active);
CREATE INDEX idx_vouchers_start_at ON vouchers(start_at);
CREATE INDEX idx_vouchers_end_at ON vouchers(end_at);
CREATE INDEX idx_vouchers_membership_required ON vouchers(membership_required);

-- =========================================================
-- ORDER + TICKET
-- =========================================================

CREATE TABLE orders (
    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),

    user_id UUID NOT NULL,
    event_id UUID NOT NULL,

    status order_status NOT NULL DEFAULT 'PENDING',

    subtotal NUMERIC(12,2) NOT NULL DEFAULT 0,
    discount_amount NUMERIC(12,2) NOT NULL DEFAULT 0,
    total_amount NUMERIC(12,2) NOT NULL DEFAULT 0,

    voucher_id UUID,

    expires_at TIMESTAMPTZ NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    paid_at TIMESTAMPTZ,
    cancelled_at TIMESTAMPTZ,

    CONSTRAINT fk_orders_user
        FOREIGN KEY (user_id) REFERENCES users(id),

    CONSTRAINT fk_orders_event
        FOREIGN KEY (event_id) REFERENCES events(id),

    CONSTRAINT fk_orders_voucher
        FOREIGN KEY (voucher_id) REFERENCES vouchers(id),

    CONSTRAINT ck_orders_amounts_non_negative CHECK (
        subtotal >= 0
        AND discount_amount >= 0
        AND total_amount >= 0
    ),
    CONSTRAINT ck_orders_total_valid CHECK (total_amount = subtotal - discount_amount),
    CONSTRAINT ck_orders_discount_not_exceed_subtotal CHECK (discount_amount <= subtotal),
    CONSTRAINT ck_orders_paid_at_required CHECK (
        status <> 'PAID' OR paid_at IS NOT NULL
    ),
    CONSTRAINT ck_orders_cancelled_at_required CHECK (
        status <> 'CANCELLED' OR cancelled_at IS NOT NULL
    )
);

CREATE INDEX idx_orders_user_id ON orders(user_id);
CREATE INDEX idx_orders_event_id ON orders(event_id);
CREATE INDEX idx_orders_status ON orders(status);
CREATE INDEX idx_orders_expires_at ON orders(expires_at);
CREATE INDEX idx_orders_voucher_id ON orders(voucher_id);
CREATE INDEX idx_orders_user_status ON orders(user_id, status);
CREATE INDEX idx_orders_event_status ON orders(event_id, status);

-- Useful for scheduler that expires pending orders.
CREATE INDEX idx_orders_pending_expires
ON orders(expires_at)
WHERE status = 'PENDING';

CREATE TABLE order_items (
    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),

    order_id UUID NOT NULL,
    event_seat_id UUID NOT NULL,

    price_snapshot NUMERIC(12,2) NOT NULL,

    qr_code VARCHAR(255) UNIQUE,
    ticket_status ticket_status NOT NULL DEFAULT 'NOT_ISSUED',

    issued_at TIMESTAMPTZ,
    checked_in_at TIMESTAMPTZ,

    CONSTRAINT fk_order_items_order
        FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE,

    CONSTRAINT fk_order_items_event_seat
        FOREIGN KEY (event_seat_id) REFERENCES event_seats(id),

    CONSTRAINT uq_order_items_order_event_seat UNIQUE (order_id, event_seat_id),

    CONSTRAINT ck_order_items_price_non_negative CHECK (price_snapshot >= 0),
    CONSTRAINT ck_order_items_ticket_qr_consistency CHECK (
        (
            ticket_status = 'NOT_ISSUED'
            AND qr_code IS NULL
            AND issued_at IS NULL
            AND checked_in_at IS NULL
        )
        OR
        (
            ticket_status IN ('VALID', 'USED', 'CANCELLED')
            AND qr_code IS NOT NULL
            AND issued_at IS NOT NULL
        )
    ),
    CONSTRAINT ck_order_items_used_checked_in CHECK (
        ticket_status <> 'USED' OR checked_in_at IS NOT NULL
    )
);

CREATE INDEX idx_order_items_order_id ON order_items(order_id);
CREATE INDEX idx_order_items_event_seat_id ON order_items(event_seat_id);
CREATE INDEX idx_order_items_ticket_status ON order_items(ticket_status);
CREATE INDEX idx_order_items_qr_code ON order_items(qr_code);

-- A sold/valid ticket should not be duplicated for the same event seat.
-- This still allows old NOT_ISSUED items from expired/cancelled orders.
CREATE UNIQUE INDEX ux_order_items_one_issued_ticket_per_event_seat
ON order_items(event_seat_id)
WHERE ticket_status IN ('VALID', 'USED');

-- =========================================================
-- VOUCHER REDEMPTION
-- =========================================================

CREATE TABLE voucher_redemptions (
    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),

    voucher_id UUID NOT NULL,
    user_id UUID NOT NULL,
    order_id UUID NOT NULL,

    discount_amount NUMERIC(12,2) NOT NULL,
    used_at TIMESTAMPTZ NOT NULL DEFAULT now(),

    CONSTRAINT fk_voucher_redemptions_voucher
        FOREIGN KEY (voucher_id) REFERENCES vouchers(id),

    CONSTRAINT fk_voucher_redemptions_user
        FOREIGN KEY (user_id) REFERENCES users(id),

    CONSTRAINT fk_voucher_redemptions_order
        FOREIGN KEY (order_id) REFERENCES orders(id) ON DELETE CASCADE,

    CONSTRAINT uq_voucher_redemptions_voucher_user UNIQUE (voucher_id, user_id),
    CONSTRAINT uq_voucher_redemptions_voucher_order UNIQUE (voucher_id, order_id),

    CONSTRAINT ck_voucher_redemptions_discount_non_negative CHECK (discount_amount >= 0)
);

CREATE INDEX idx_voucher_redemptions_voucher_id ON voucher_redemptions(voucher_id);
CREATE INDEX idx_voucher_redemptions_user_id ON voucher_redemptions(user_id);
CREATE INDEX idx_voucher_redemptions_order_id ON voucher_redemptions(order_id);

-- =========================================================
-- COMMENTS
-- =========================================================

COMMENT ON TABLE users IS 'User account, profile, role and OAuth identity in one table for MVP simplicity.';
COMMENT ON TABLE categories IS 'Event categories. Each event belongs to one category in the simplified model.';
COMMENT ON TABLE events IS 'Movies/showtimes created by providers and managed by admins.';
COMMENT ON TABLE event_sections IS 'Seat sections for each event, such as VIP, A, B.';
COMMENT ON TABLE event_seats IS 'Core booking table. Seat status is managed here with transaction and row locking.';
COMMENT ON TABLE orders IS 'Mock checkout order. PENDING orders hold seats; PAID orders issue tickets.';
COMMENT ON TABLE order_items IS 'Order lines and ticket QR data. One item represents one booked event seat.';
COMMENT ON TABLE membership_plans IS 'Membership packages.';
COMMENT ON TABLE user_memberships IS 'User membership subscription history.';
COMMENT ON TABLE vouchers IS 'Voucher definition and usage counter.';
COMMENT ON TABLE voucher_redemptions IS 'Voucher usage history per user/order.';
